# CmakeExternalProject.Makefile-libbid.a

./: CMakeLists.txt  README.txt
